--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "homepage": "https://jian7061.github.io/crypto-tracker"
   },
   "scripts": {
     "start": "react-scripts start",
